# Micah_0xC

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  version-config.json
AppLications/: npm_install_log.txt  package-lock.json  package.json  rsbuild.config.js
AppLications/public/: index.html
AppLications/scripts/: bump-version.js
AppLications/src/: App.css  App.jsx  api.ts
AppLications/src-tauri/: Cargo.toml  tauri.conf.json
AppLications/src-tauri/capabilities/: default.json
AppLications/src-tauri/icons/: icon.icns
AppLications/src-tauri/src/: lib.rs
AppLications/src/components/: Background.jsx  Character.jsx  DownloadCharacter.css  ForceUpdate.css  ForceUpdate.jsx  ImagePreviewModal.jsx  IntroOverlay.jsx  ProfileCard.jsx  SearchGame.jsx  SteamManager.css  SteamManager.jsx  SystemInfoCard.jsx
AppLications/src/helpers/: createTextSequence.js
AppLications/src/pages/: LikePage.jsx  SettingsPage.jsx
agent/skills/gsap-core/: SKILL.md
agent/skills/gsap-frameworks/: SKILL.md
agent/skills/gsap-performance/: SKILL.md
agent/skills/gsap-plugins/: SKILL.md
agent/skills/gsap-react/: SKILL.md
agent/skills/gsap-scrolltrigger/: SKILL.md
agent/skills/gsap-timeline/: SKILL.md
agent/skills/gsap-utils/: SKILL.md
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/config/: env.ts
apps/api/src/controllers/: auth.controller.ts
apps/api/src/errors/: app-error.ts
apps/api/src/middlewares/: auth.ts  (+2 more)
apps/bot/: .env.example  package.json
apps/bot/src/: index.ts
(+19 files in other folders)
